Update 5-1.html for pages

--- a/teaching/300/300notes/5-1.html
+++ b/teaching/300/300notes/5-1.html
@@ -108,6 +108,7 @@
 <div class="ltx_para ltx_noindent">
   <p class="ltx_p">Moving forward we need a strong understanding of functions, and we will take our time seeing how functions, numbers, and sets all interact with one another. The goal of functions is to grasp the concepts of calculus! This content will be assumed in MATH-409, with perhaps only one or two days given for review.</p>
 </div>
+  <div class="ltx_pagination ltx_role_newpage"></div>
 <section id="S5.SS1.SSS2" class="ltx_subsubsection">
 <h4 class="ltx_title ltx_title_subsubsection">
 <span class="ltx_tag ltx_tag_subsubsection">5.1.2 </span><span class="ltx_text" style="color:#800000;">Well-Defined Functions</span>
@@ -138,7 +139,6 @@
 <div id="S5.SS1.SSS2.p1" class="ltx_para ltx_noindent">
 <p class="ltx_p">Note that we define a function as a “rule”. A natural question might be, “What is a rule?” For now we will understanding what this means intuitively - later we will define a function as a special case of <span class="ltx_text ltx_font_italic">relation</span> (Chapter 7).</p>
 </div>
-<div class="ltx_pagination ltx_role_newpage"></div>
 <div id="S5.SS1.Thmtheorem4" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>5.1.4.</h3>
@@ -168,6 +168,7 @@
 </div>
   <div class="tiny-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
+<div class="ltx_pagination ltx_role_newpage"></div>
 <div id="S5.SS1.Thmtheorem5" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>5.1.5.</h3>
@@ -182,7 +183,7 @@
 <div id="S5.I2.ix1.p1" class="ltx_para ltx_noindent">
 <p class="ltx_p">Define <math id="S5.I2.ix1.p1.m1" class="ltx_Math" alttext="f:\{1,2,3\}\rightarrow\{1,2,3\}" display="inline"><mrow><mi>f</mi><mo lspace="0.278em" rspace="0.278em">:</mo><mrow><mrow><mo stretchy="false">{</mo><mn>1</mn><mo>,</mo><mn>2</mn><mo>,</mo><mn>3</mn><mo stretchy="false">}</mo></mrow><mo stretchy="false">→</mo><mrow><mo stretchy="false">{</mo><mn>1</mn><mo>,</mo><mn>2</mn><mo>,</mo><mn>3</mn><mo stretchy="false">}</mo></mrow></mrow></mrow></math> via <math id="S5.I2.ix1.p1.m2" class="ltx_Math" alttext="f(a)=a-1" display="inline"><mrow><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>a</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mrow><mi>a</mi><mo>−</mo><mn>1</mn></mrow></mrow></math>.</p>
 </div>
-  <div class="tiny-answer-space" aria-hidden="true"></div>
+  <div class="answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </li>
 <li id="S5.I2.ix2" class="ltx_item" style="list-style-type:none;">
@@ -190,7 +191,7 @@
 <div id="S5.I2.ix2.p1" class="ltx_para ltx_noindent">
 <p class="ltx_p">Define <math id="S5.I2.ix2.p1.m1" class="ltx_Math" alttext="g:\mathbb{N}\rightarrow\mathbb{Q}" display="inline"><mrow><mi>g</mi><mo lspace="0.278em" rspace="0.278em">:</mo><mrow><mi>ℕ</mi><mo stretchy="false">→</mo><mi>ℚ</mi></mrow></mrow></math> via <math id="S5.I2.ix2.p1.m2" class="ltx_Math" alttext="g(n)=\frac{n}{n-1}" display="inline"><mrow><mrow><mi>g</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>n</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mfrac><mi>n</mi><mrow><mi>n</mi><mo>−</mo><mn>1</mn></mrow></mfrac></mrow></math>.</p>
 </div>
-  <div class="tiny-answer-space" aria-hidden="true"></div>
+  <div class="answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </li>
 <li id="S5.I2.ix3" class="ltx_item" style="list-style-type:none;">
@@ -207,7 +208,7 @@
 </tr></tbody>
 </table>
 </div>
-  <div class="tiny-answer-space" aria-hidden="true"></div>
+  <div class="answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </li>
 <li id="S5.I2.ix4" class="ltx_item" style="list-style-type:none;">
@@ -215,6 +216,8 @@
 <div id="S5.I2.ix4.p1" class="ltx_para ltx_noindent">
 <p class="ltx_p">Define <math id="S5.I2.ix4.p1.m1" class="ltx_Math" alttext="s:\mathbb{Q}\rightarrow\mathbb{Z}" display="inline"><mrow><mi>s</mi><mo lspace="0.278em" rspace="0.278em">:</mo><mrow><mi>ℚ</mi><mo stretchy="false">→</mo><mi>ℤ</mi></mrow></mrow></math> via <math id="S5.I2.ix4.p1.m2" class="ltx_Math" alttext="s(a/b)=a+b" display="inline"><mrow><mrow><mi>s</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mrow><mi>a</mi><mo>/</mo><mi>b</mi></mrow><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mrow><mi>a</mi><mo>+</mo><mi>b</mi></mrow></mrow></math>.</p>
 </div>
+  <div class="answer-space" aria-hidden="true"></div>
+  <span class="sr-only">Blank space for you to write your work.</span>
 </li>
 </ol>
 </div>
