Update 5-2.html pages

--- a/teaching/300/300notes/5-2.html
+++ b/teaching/300/300notes/5-2.html
@@ -137,6 +137,7 @@ x+1&amp;x\geq 0\end{cases}" display="inline"><mrow><mrow><mi>g</mi><mo>⁢</mo><
 </div>
 </div>
 </li>
+  <div class="ltx_pagination ltx_role_newpage"></div>
 <li id="S5.I5.i2" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_item">•</span> 
 <div id="S5.I5.i2.p1" class="ltx_para ltx_noindent">
@@ -157,7 +158,6 @@ x+1&amp;x\geq 0\end{cases}" display="inline"><mrow><mrow><mi>g</mi><mo>⁢</mo><
 </li>
 </ul>
 </div>
-<div class="ltx_pagination ltx_role_newpage"></div>
 </section>
 <section id="S5.SS2.SSS2" class="ltx_subsubsection">
 <h2 class="ltx_title ltx_title_subsubsection">
@@ -194,6 +194,7 @@ x+1&amp;x\geq 0\end{cases}" display="inline"><mrow><mrow><mi>g</mi><mo>⁢</mo><
 </ol>
 </div>
 </div>
+  <div class="ltx_pagination ltx_role_newpage"></div>
 <div id="S5.SS2.Thmtheorem3" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>5.2.3.</h3>
@@ -221,17 +222,17 @@ x+1&amp;x\geq 0\end{cases}" display="inline"><mrow><mrow><mi>g</mi><mo>⁢</mo><
 <div id="S5.SS2.Thmtheorem4.p1" class="ltx_para ltx_noindent">
 <p class="ltx_p">Without using the examples already provided, give an example of a function that is injective but not surjective. Give the formula and sketch its graph.</p>
 </div>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="large-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <div id="S5.SS2.Thmtheorem4.p2" class="ltx_para ltx_noindent">
 <p class="ltx_p">Without using the examples already provided, give an example of a function that is surjective but not injective. Give the formula and sketch its graph.</p>
 </div>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="large-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <div id="S5.SS2.Thmtheorem4.p3" class="ltx_para ltx_noindent">
 <p class="ltx_p">Without using the examples already provided, give an example of a function that is neither injective nor surjective. Give the formula and sketch its graph.</p>
 </div>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="large-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </div>
 <div class="ltx_pagination ltx_role_newpage"></div>
