Update 5-2.html pages

--- a/teaching/300/300notes/5-2.html
+++ b/teaching/300/300notes/5-2.html
@@ -232,7 +232,7 @@ x+1&amp;x\geq 0\end{cases}" display="inline"><mrow><mrow><mi>g</mi><mo>⁢</mo><
 <div id="S5.SS2.Thmtheorem4.p3" class="ltx_para ltx_noindent">
 <p class="ltx_p">Without using the examples already provided, give an example of a function that is neither injective nor surjective. Give the formula and sketch its graph.</p>
 </div>
-  <div class="large-answer-space" aria-hidden="true"></div>
+  <div class="answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </div>
 <div class="ltx_pagination ltx_role_newpage"></div>
