Update 5-3.html formatting

--- a/teaching/300/300notes/5-3.html
+++ b/teaching/300/300notes/5-3.html
@@ -223,7 +223,7 @@
 </section>
 <section id="S5.SS3.SSS3" class="ltx_subsubsection">
 <h2 class="ltx_title ltx_title_subsubsection">
-<span class="ltx_tag ltx_tag_subsubsection">5.3.3 </span>Proving with Compositions</h2>
+<span class="ltx_tag ltx_tag_subsubsection">5.3.3 </span><span class="ltx_text" style="color:#800000;">Proving with Compositions</span>
 
 <div id="S5.SS3.SSS3.p1" class="ltx_para">
 <p class="ltx_p">Now that we have explored compositions with injective and surjective functions, we are ready to prove statements involving these two concepts.</p>
@@ -247,12 +247,12 @@
   <div class="half-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <div class="ltx_pagination ltx_role_newpage"></div>
-<div id="S5.SS3.Thmtheorem9" class="ltx_theorem ltx_theorem_example">
-<h3 class="ltx_title ltx_runin ltx_title_theorem">
-<span class="ltx_text" style="color:#800000;">  Example </span>5.3.9.</h3>
 <div id="S5.SS3.Thmtheorem9.p1" class="ltx_para ltx_noindent">
 <p class="ltx_p">For a set <math id="S5.SS3.Thmtheorem9.p1.m1" class="ltx_Math" alttext="S" display="inline"><mi>S</mi></math>, the <span class="ltx_text ltx_font_bold">identity function</span> <math id="S5.SS3.Thmtheorem9.p1.m2" class="ltx_Math" alttext="I_{S}" display="inline"><msub><mi>I</mi><mi>S</mi></msub></math> is defined as the function <math id="S5.SS3.Thmtheorem9.p1.m3" class="ltx_Math" alttext="\iota_{S}:S\rightarrow S" display="inline"><mrow><msub><mi>ι</mi><mi>S</mi></msub><mo lspace="0.278em" rspace="0.278em">:</mo><mrow><mi>S</mi><mo stretchy="false">→</mo><mi>S</mi></mrow></mrow></math> where, for <math id="S5.SS3.Thmtheorem9.p1.m4" class="ltx_Math" alttext="x\in S" display="inline"><mrow><mi>x</mi><mo>∈</mo><mi>S</mi></mrow></math>, <math id="S5.SS3.Thmtheorem9.p1.m5" class="ltx_Math" alttext="\iota_{S}(x)=x" display="inline"><mrow><mrow><msub><mi>ι</mi><mi>S</mi></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mi>x</mi></mrow></math>. That is, this function returns the input value as the output value with no changes.</p>
 </div>
+<div id="S5.SS3.Thmtheorem9" class="ltx_theorem ltx_theorem_example">
+<h3 class="ltx_title ltx_runin ltx_title_theorem">
+<span class="ltx_text" style="color:#800000;">  Example </span>5.3.9.</h3>
 <div id="S5.SS3.Thmtheorem9.p2" class="ltx_para">
 <p class="ltx_p">Let <math id="S5.SS3.Thmtheorem9.p2.m1" class="ltx_Math" alttext="f:X\rightarrow Y" display="inline"><mrow><mi>f</mi><mo lspace="0.278em" rspace="0.278em">:</mo><mrow><mi>X</mi><mo stretchy="false">→</mo><mi>Y</mi></mrow></mrow></math> be a function. Prove that <math id="S5.SS3.Thmtheorem9.p2.m2" class="ltx_Math" alttext="f\circ\iota_{X}=f" display="inline"><mrow><mrow><mi>f</mi><mo lspace="0.222em" rspace="0.222em">∘</mo><msub><mi>ι</mi><mi>X</mi></msub></mrow><mo>=</mo><mi>f</mi></mrow></math>.</p>
 </div>
