Update 5-3.html missing </h2>

--- a/teaching/300/300notes/5-3.html
+++ b/teaching/300/300notes/5-3.html
@@ -223,7 +223,7 @@
 </section>
 <section id="S5.SS3.SSS3" class="ltx_subsubsection">
 <h2 class="ltx_title ltx_title_subsubsection">
-<span class="ltx_tag ltx_tag_subsubsection">5.3.3 </span><span class="ltx_text" style="color:#800000;">Proving with Compositions</span>
+<span class="ltx_tag ltx_tag_subsubsection">5.3.3 </span><span class="ltx_text" style="color:#800000;">Proving with Compositions</span></h2>
 
 <div id="S5.SS3.SSS3.p1" class="ltx_para">
 <p class="ltx_p">Now that we have explored compositions with injective and surjective functions, we are ready to prove statements involving these two concepts.</p>
