--- a/teaching/300/300notes/5-5.html
+++ b/teaching/300/300notes/5-5.html
@@ -152,7 +152,7 @@
 <div id="S5.I3.ix1.p2" class="ltx_para ltx_noindent">
 <p class="ltx_p">Using this, show that the following statement is <span class="ltx_text ltx_font_italic">false</span>: for any function <math id="S5.I3.ix1.p2.m1" class="ltx_Math" alttext="f:X\rightarrow Y" display="inline"><mrow><mi>f</mi><mo lspace="0.278em" rspace="0.278em">:</mo><mrow><mi>X</mi><mo stretchy="false">→</mo><mi>Y</mi></mrow></mrow></math> where <math id="S5.I3.ix1.p2.m2" class="ltx_Math" alttext="C,D\subset Y" display="inline"><mrow><mrow><mi>C</mi><mo>,</mo><mi>D</mi></mrow><mo>⊂</mo><mi>Y</mi></mrow></math>, <math id="S5.I3.ix1.p2.m3" class="ltx_Math" alttext="f(C)\cap f(D)\subset f^{-1}(C\cap D)" display="inline"><mrow><mrow><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>C</mi><mo stretchy="false">)</mo></mrow></mrow><mo>∩</mo><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>D</mi><mo stretchy="false">)</mo></mrow></mrow></mrow><mo>⊂</mo><mrow><msup><mi>f</mi><mrow><mo>−</mo><mn>1</mn></mrow></msup><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mrow><mi>C</mi><mo>∩</mo><mi>D</mi></mrow><mo stretchy="false">)</mo></mrow></mrow></mrow></math>.</p>
 </div>
-  <div class="large-answer-space" aria-hidden="true"></div>
+  <div class="answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </li>
 <li id="S5.I3.ix2" class="ltx_item" style="list-style-type:none;">
@@ -165,7 +165,7 @@
 <div id="S5.I3.ix2.p2" class="ltx_para ltx_noindent">
 <p class="ltx_p">Using this, show that the following statement is <span class="ltx_text ltx_font_italic">false</span>: for any function <math id="S5.I3.ix2.p2.m1" class="ltx_Math" alttext="f:X\rightarrow Y" display="inline"><mrow><mi>f</mi><mo lspace="0.278em" rspace="0.278em">:</mo><mrow><mi>X</mi><mo stretchy="false">→</mo><mi>Y</mi></mrow></mrow></math> where <math id="S5.I3.ix2.p2.m2" class="ltx_Math" alttext="A,B\subset X" display="inline"><mrow><mrow><mi>A</mi><mo>,</mo><mi>B</mi></mrow><mo>⊂</mo><mi>X</mi></mrow></math>, <math id="S5.I3.ix2.p2.m3" class="ltx_Math" alttext="f(A)\cap f(B)\subset f(A\cap B)" display="inline"><mrow><mrow><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>A</mi><mo stretchy="false">)</mo></mrow></mrow><mo>∩</mo><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>B</mi><mo stretchy="false">)</mo></mrow></mrow></mrow><mo>⊂</mo><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mrow><mi>A</mi><mo>∩</mo><mi>B</mi></mrow><mo stretchy="false">)</mo></mrow></mrow></mrow></math>.</p>
 </div>
-  <div class="large-answer-space" aria-hidden="true"></div>
+  <div class="answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </li>
 </ol>
@@ -178,7 +178,9 @@
 <div id="S5.SS5.Thmtheorem6.p1" class="ltx_para">
 <p class="ltx_p">Let <math id="S5.SS5.Thmtheorem6.p1.m1" class="ltx_Math" alttext="f:X\rightarrow Y" display="inline"><mrow><mi>f</mi><mo lspace="0.278em" rspace="0.278em">:</mo><mrow><mi>X</mi><mo stretchy="false">→</mo><mi>Y</mi></mrow></mrow></math> be an injective function and let <math id="S5.SS5.Thmtheorem6.p1.m2" class="ltx_Math" alttext="S\subset X" display="inline"><mrow><mi>S</mi><mo>⊂</mo><mi>X</mi></mrow></math>. Then <math id="S5.SS5.Thmtheorem6.p1.m3" class="ltx_Math" alttext="f^{-1}(f(S))=S" display="inline"><mrow><mrow><msup><mi>f</mi><mrow><mo>−</mo><mn>1</mn></mrow></msup><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>S</mi><mo stretchy="false">)</mo></mrow></mrow><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mi>S</mi></mrow></math>.</p>
 </div>
-</div>
+</div> 
+  <div class="half-answer-space" aria-hidden="true"></div>
+  <span class="sr-only">Blank space for you to write your work.</span>
 <div id="S5.SS5.Thmtheorem7" class="ltx_theorem ltx_theorem_theorem">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#006600;">  Theorem </span>5.5.7.</h3>
@@ -186,6 +188,8 @@
 <p class="ltx_p">Let <math id="S5.SS5.Thmtheorem7.p1.m1" class="ltx_Math" alttext="g:X\rightarrow Y" display="inline"><mrow><mi>g</mi><mo lspace="0.278em" rspace="0.278em">:</mo><mrow><mi>X</mi><mo stretchy="false">→</mo><mi>Y</mi></mrow></mrow></math> be a surjective function and let <math id="S5.SS5.Thmtheorem7.p1.m2" class="ltx_Math" alttext="T\subset Y" display="inline"><mrow><mi>T</mi><mo>⊂</mo><mi>Y</mi></mrow></math>. Then <math id="S5.SS5.Thmtheorem7.p1.m3" class="ltx_Math" alttext="f(f^{-1}(T))=T" display="inline"><mrow><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mrow><msup><mi>f</mi><mrow><mo>−</mo><mn>1</mn></mrow></msup><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>T</mi><mo stretchy="false">)</mo></mrow></mrow><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mi>T</mi></mrow></math>.</p>
 </div>
 </div>
+    <div class="half-answer-space" aria-hidden="true"></div>
+  <span class="sr-only">Blank space for you to write your work.</span>
 <div class="ltx_pagination ltx_role_newpage"></div>
 <div id="S5.SS5.Thmtheorem8" class="ltx_theorem ltx_theorem_theorem">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
