Update 6-5.html pages

--- a/teaching/300/300notes/6-5.html
+++ b/teaching/300/300notes/6-5.html
@@ -238,7 +238,7 @@ define <math id="S6.SS5.Thmtheorem2.p1.m2" class="ltx_Math" alttext="n\mathbb{Z}
 <p class="ltx_p">Prove that, for all <math id="S6.SS5.Thmtheorem14.p1.m1" class="ltx_Math" alttext="n\in\mathbb{N}" display="inline"><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow></math>, <math id="S6.SS5.Thmtheorem14.p1.m2" class="ltx_Math" alttext="[7^{4n}]_{100}=[1]_{100}" display="inline"><mrow><msub><mrow><mo stretchy="false">[</mo><msup><mn>7</mn><mrow><mn>4</mn><mo>⁢</mo><mi>n</mi></mrow></msup><mo stretchy="false">]</mo></mrow><mn>100</mn></msub><mo>=</mo><msub><mrow><mo stretchy="false">[</mo><mn>1</mn><mo stretchy="false">]</mo></mrow><mn>100</mn></msub></mrow></math>.</p>
 </div>
 </div>
-  <div class="large-answer-space" aria-hidden="true"></div>
+  <div class="answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <div class="ltx_pagination ltx_role_newpage"></div>
 </section>
