Update test.html color

--- a/teaching/300/300notes/test.html
+++ b/teaching/300/300notes/test.html
@@ -46,7 +46,7 @@
 
 <div id="S5.SS1.Thmtheorem1" class="ltx_theorem ltx_theorem_example">
 <h4 class="ltx_title ltx_runin ltx_title_theorem">
-<span class="ltx_text" style="color:#800000;">  </span> (Example)5.1.1.</h4>
+<span class="ltx_text" style="color:#800000;">  Example </span>5.1.1.</h4>
 <div id="S5.SS1.Thmtheorem1.p1" class="ltx_para ltx_noindent">
 <p class="ltx_p">Define each of the terms below:</p>
 </div>
@@ -68,7 +68,7 @@
 </div>
 <div id="S5.SS1.Thmtheorem2" class="ltx_theorem ltx_theorem_example">
 <h4 class="ltx_title ltx_runin ltx_title_theorem">
-<span class="ltx_text" style="color:#800000;">  </span> (Example)5.1.2.</h4>
+<span class="ltx_text" style="color:#800000;">  Example </span>5.1.2.</h4>
 <div id="S5.SS1.Thmtheorem2.p1" class="ltx_para ltx_noindent">
 <p class="ltx_p">A social media company wants to map every user’s unique username (the domain called <math id="S5.SS1.Thmtheorem2.p1.m1" class="ltx_Math" alttext="U" display="inline"><mi>U</mi></math>) to the email address they signed up with (the codomain called <math id="S5.SS1.Thmtheorem2.p1.m2" class="ltx_Math" alttext="E" display="inline"><mi>E</mi></math>). The function <math id="S5.SS1.Thmtheorem2.p1.m3" class="ltx_Math" alttext="f:U\rightarrow E" display="inline"><mrow><mi>f</mi><mo lspace="0.278em" rspace="0.278em">:</mo><mrow><mi>U</mi><mo stretchy="false">→</mo><mi>E</mi></mrow></mrow></math> maps a username to its corresponding email.</p>
 </div>
@@ -126,7 +126,7 @@
 <div class="ltx_pagination ltx_role_newpage"></div>
 <div id="S5.SS1.Thmtheorem4" class="ltx_theorem ltx_theorem_example">
 <h4 class="ltx_title ltx_runin ltx_title_theorem">
-<span class="ltx_text" style="color:#800000;">  </span> (Example)5.1.4.</h4>
+<span class="ltx_text" style="color:#800000;">  Example </span>5.1.4.</h4>
 <div id="S5.SS1.Thmtheorem4.p1" class="ltx_para ltx_noindent">
 <p class="ltx_p">Let <math id="S5.SS1.Thmtheorem4.p1.m1" class="ltx_Math" alttext="X=\{a,b,c,d\}" display="inline"><mrow><mi>X</mi><mo>=</mo><mrow><mo stretchy="false">{</mo><mi>a</mi><mo>,</mo><mi>b</mi><mo>,</mo><mi>c</mi><mo>,</mo><mi>d</mi><mo stretchy="false">}</mo></mrow></mrow></math> and <math id="S5.SS1.Thmtheorem4.p1.m2" class="ltx_Math" alttext="Y=\{1,2,3,4\}" display="inline"><mrow><mi>Y</mi><mo>=</mo><mrow><mo stretchy="false">{</mo><mn>1</mn><mo>,</mo><mn>2</mn><mo>,</mo><mn>3</mn><mo>,</mo><mn>4</mn><mo stretchy="false">}</mo></mrow></mrow></math>. Define the <span class="ltx_text ltx_font_bold">graph</span> of <math id="S5.SS1.Thmtheorem4.p1.m3" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> from <math id="S5.SS1.Thmtheorem4.p1.m4" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> to <math id="S5.SS1.Thmtheorem4.p1.m5" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> to be</p>
 <table id="S5.Ex2" class="ltx_equation ltx_eqn_table">
@@ -151,7 +151,7 @@
 </div>
 <div id="S5.SS1.Thmtheorem5" class="ltx_theorem ltx_theorem_example">
 <h4 class="ltx_title ltx_runin ltx_title_theorem">
-<span class="ltx_text" style="color:#800000;">  </span> (Example)5.1.5.</h4>
+<span class="ltx_text" style="color:#800000;">  Example </span>5.1.5.</h4>
 <div id="S5.SS1.Thmtheorem5.p1" class="ltx_para">
 <p class="ltx_p">For each of the following, explain why the given description does <span class="ltx_text ltx_font_italic">not</span> describe a function.</p>
 </div>
@@ -199,7 +199,7 @@
 </div>
 <div id="S5.SS1.Thmtheorem6" class="ltx_theorem ltx_theorem_example">
 <h4 class="ltx_title ltx_runin ltx_title_theorem">
-<span class="ltx_text" style="color:#800000;">  </span> (Example)5.1.6.</h4>
+<span class="ltx_text" style="color:#800000;">  Example </span>5.1.6.</h4>
 <div id="S5.SS1.Thmtheorem6.p1" class="ltx_para">
 <p class="ltx_p">Let <math id="S5.SS1.Thmtheorem6.p1.m1" class="ltx_Math" alttext="f:\mathbb{R}\rightarrow\mathbb{R}" display="inline"><mrow><mi>f</mi><mo lspace="0.278em" rspace="0.278em">:</mo><mrow><mi>ℝ</mi><mo stretchy="false">→</mo><mi>ℝ</mi></mrow></mrow></math> be defined by <math id="S5.SS1.Thmtheorem6.p1.m2" class="ltx_Math" alttext="f(x)=x^{2}+1" display="inline"><mrow><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mrow><msup><mi>x</mi><mn>2</mn></msup><mo>+</mo><mn>1</mn></mrow></mrow></math>. Show that <math id="S5.SS1.Thmtheorem6.p1.m3" class="ltx_Math" alttext="f(\mathbb{R})=[1,\infty)" display="inline"><mrow><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>ℝ</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mrow><mo stretchy="false">[</mo><mn>1</mn><mo>,</mo><mi mathvariant="normal">∞</mi><mo stretchy="false">)</mo></mrow></mrow></math> by showing these two are equal as sets.</p>
 </div>
@@ -207,7 +207,7 @@
 <div class="ltx_pagination ltx_role_newpage"></div>
 <div id="S5.SS1.Thmtheorem7" class="ltx_theorem ltx_theorem_example">
 <h4 class="ltx_title ltx_runin ltx_title_theorem">
-<span class="ltx_text" style="color:#800000;">  </span> (Example)5.1.7.</h4>
+<span class="ltx_text" style="color:#800000;">  Example </span>5.1.7.</h4>
 <div id="S5.SS1.Thmtheorem7.p1" class="ltx_para">
 <p class="ltx_p">Let <math id="S5.SS1.Thmtheorem7.p1.m1" class="ltx_Math" alttext="f:\mathbb{R}\rightarrow\mathbb{R}" display="inline"><mrow><mi>f</mi><mo lspace="0.278em" rspace="0.278em">:</mo><mrow><mi>ℝ</mi><mo stretchy="false">→</mo><mi>ℝ</mi></mrow></mrow></math> be defined as <math id="S5.SS1.Thmtheorem7.p1.m2" class="ltx_Math" alttext="f(x)=\dfrac{2x+1}{x-4}" display="inline"><mrow><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mstyle displaystyle="true"><mfrac><mrow><mrow><mn>2</mn><mo>⁢</mo><mi>x</mi></mrow><mo>+</mo><mn>1</mn></mrow><mrow><mi>x</mi><mo>−</mo><mn>4</mn></mrow></mfrac></mstyle></mrow></math>. Show that <math id="S5.SS1.Thmtheorem7.p1.m3" class="ltx_Math" alttext="f(X)=\mathbb{R}\setminus\{2\}" display="inline"><mrow><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mrow><mi>ℝ</mi><mo>∖</mo><mrow><mo stretchy="false">{</mo><mn>2</mn><mo stretchy="false">}</mo></mrow></mrow></mrow></math>.</p>
 </div>
