Update 6-5r.html svg alt

--- a/teaching/300/300notes/6-5r.html
+++ b/teaching/300/300notes/6-5r.html
@@ -45,7 +45,7 @@
 <div id="S6.SS5.SSS1.p2" class="ltx_para ltx_noindent">
 <p class="ltx_p">In your explanations of each of these examples, you are doing <span class="ltx_text ltx_font_italic">addition and subtraction modulo <math id="S6.SS5.SSS1.p2.m1" class="ltx_Math" alttext="12" display="inline"><mn>12</mn></math></span>. “Modulo” arithmetic situates the numbers in a circle:</p>
 </div>
-<figure id="S6.SS5.SSS1.fig1" class="ltx_figure"><img src="images/clock.png" id="S6.SS5.SSS1.g1" class="ltx_graphics ltx_centering ltx_img_square" width="299" height="301" alt="[Uncaptioned image]">
+<figure id="S6.SS5.SSS1.fig1" class="ltx_figure"><img src="images/clock.png" id="S6.SS5.SSS1.g1" class="ltx_graphics ltx_centering ltx_img_square" width="299" height="301" alt="An analog clock">
 </figure>
 <div id="S6.SS5.SSS1.p3" class="ltx_para ltx_noindent">
 <p class="ltx_p">For example, “adding 5 to 8” yields 13, but “adding 5 to 8 on a clock” means we must also subtract 12 to get “<math id="S6.SS5.SSS1.p3.m1" class="ltx_Math" alttext="5+8\equiv 1" display="inline"><mrow><mrow><mn>5</mn><mo>+</mo><mn>8</mn></mrow><mo>≡</mo><mn>1</mn></mrow></math> modulo 12”. (Modulo arithmetic doesn’t have “am” or “pm”! It also uses <math id="S6.SS5.SSS1.p3.m2" class="ltx_Math" alttext="\equiv" display="inline"><mo>≡</mo></math> to distinguish from <math id="S6.SS5.SSS1.p3.m3" class="ltx_Math" alttext="=" display="inline"><mo>=</mo></math>.)</p>
