Update 7-3.html svg alt

--- a/teaching/300/300notes/7-3.html
+++ b/teaching/300/300notes/7-3.html
@@ -85,7 +85,7 @@
 <div id="S7.SS3.SSS1.p1" class="ltx_para">
 <p class="ltx_p">Let us revisit the diagram from the first Example of Section 7.2. Not all of our diagrams might look the same, but perhaps we might have a diagram like this:</p>
 </div>
-<figure id="S7.SS3.SSS1.fig1" class="ltx_figure"><img src="images/equiv.png" id="S7.SS3.SSS1.g1" class="ltx_graphics ltx_centering ltx_img_landscape" width="399" height="161" alt="A diagram of equivalence classes partitioning a set">
+<figure id="S7.SS3.SSS1.fig1" class="ltx_figure"><img src="images/equiv.png" alt="a partition of a set S into various blocks" id="S7.SS3.SSS1.g1" class="ltx_graphics ltx_centering ltx_img_landscape" width="399" height="161" alt="A diagram of equivalence classes partitioning a set">
 </figure>
 <div id="S7.SS3.SSS1.p2" class="ltx_para">
 <p class="ltx_p">In this diagram we noted that equivalence relations break up a set into regions. In the last example of Section 7.2 we saw that these regions satisfy a couple interesting properties. Do you see any connections between these properties and the definition of a partition?</p>
