Update 7-4.html fix mult tables

--- a/teaching/300/300readings/7-4.html
+++ b/teaching/300/300readings/7-4.html
@@ -435,7 +435,7 @@
 <table class="ltx_tabular ltx_centering ltx_guessed_headers ltx_align_middle">
 <thead class="ltx_thead">
 <tr class="ltx_tr">
-<tr class="ltx_td ltx_align_center ltx_th ltx_th_column ltx_th_row ltx_border_r"><math id="S7.SS4.SSS3.m11" class="ltx_Math" data-alttext="\oplus" display="inline"><mo>⊕</mo></math></tr>
+<td class="ltx_td ltx_align_center ltx_th ltx_th_column ltx_th_row ltx_border_r"><math id="S7.SS4.SSS3.m11" class="ltx_Math" data-alttext="\oplus" display="inline"><mo>⊕</mo></math></td>
 <th class="ltx_td ltx_align_center ltx_th ltx_th_column"><math id="S7.SS4.SSS3.m12" class="ltx_Math" data-alttext="[0]" display="inline"><mrow><mo stretchy="false">[</mo><mn>0</mn><mo stretchy="false">]</mo></mrow></math></th>
 <th class="ltx_td ltx_align_center ltx_th ltx_th_column"><math id="S7.SS4.SSS3.m13" class="ltx_Math" data-alttext="[1]" display="inline"><mrow><mo stretchy="false">[</mo><mn>1</mn><mo stretchy="false">]</mo></mrow></math></th>
 <th class="ltx_td ltx_align_center ltx_th ltx_th_column"><math id="S7.SS4.SSS3.m14" class="ltx_Math" data-alttext="[2]" display="inline"><mrow><mo stretchy="false">[</mo><mn>2</mn><mo stretchy="false">]</mo></mrow></math></th>
@@ -467,7 +467,7 @@
 <table class="ltx_tabular ltx_centering ltx_guessed_headers ltx_align_middle">
 <thead class="ltx_thead">
 <tr class="ltx_tr">
-<tr class="ltx_td ltx_align_center ltx_th ltx_th_column ltx_th_row ltx_border_r"><math id="S7.SS4.SSS3.m27" class="ltx_Math" data-alttext="\odot" display="inline"><mo>⊙</mo></math></tr>
+<td class="ltx_td ltx_align_center ltx_th ltx_th_column ltx_th_row ltx_border_r"><math id="S7.SS4.SSS3.m27" class="ltx_Math" data-alttext="\odot" display="inline"><mo>⊙</mo></math></td>
 <th class="ltx_td ltx_align_center ltx_th ltx_th_column"><math id="S7.SS4.SSS3.m28" class="ltx_Math" data-alttext="[0]" display="inline"><mrow><mo stretchy="false">[</mo><mn>0</mn><mo stretchy="false">]</mo></mrow></math></th>
 <th class="ltx_td ltx_align_center ltx_th ltx_th_column"><math id="S7.SS4.SSS3.m29" class="ltx_Math" data-alttext="[1]" display="inline"><mrow><mo stretchy="false">[</mo><mn>1</mn><mo stretchy="false">]</mo></mrow></math></th>
 <th class="ltx_td ltx_align_center ltx_th ltx_th_column"><math id="S7.SS4.SSS3.m30" class="ltx_Math" data-alttext="[2]" display="inline"><mrow><mo stretchy="false">[</mo><mn>2</mn><mo stretchy="false">]</mo></mrow></math></th>
@@ -517,7 +517,7 @@
 <table class="ltx_tabular ltx_centering ltx_guessed_headers ltx_align_middle">
 <thead class="ltx_thead">
 <tr class="ltx_tr">
-<tr class="ltx_td ltx_align_center ltx_th ltx_th_column ltx_th_row ltx_border_r"><math id="S7.I6.i2.m1" class="ltx_Math" data-alttext="\oplus" display="inline"><mo>⊕</mo></math></tr>
+<td class="ltx_td ltx_align_center ltx_th ltx_th_column ltx_th_row ltx_border_r"><math id="S7.I6.i2.m1" class="ltx_Math" data-alttext="\oplus" display="inline"><mo>⊕</mo></math></td>
 <th class="ltx_td ltx_align_center ltx_th ltx_th_column"><math id="S7.I6.i2.m2" class="ltx_Math" data-alttext="[0]" display="inline"><mrow><mo stretchy="false">[</mo><mn>0</mn><mo stretchy="false">]</mo></mrow></math></th>
 <th class="ltx_td ltx_align_center ltx_th ltx_th_column"><math id="S7.I6.i2.m3" class="ltx_Math" data-alttext="[1]" display="inline"><mrow><mo stretchy="false">[</mo><mn>1</mn><mo stretchy="false">]</mo></mrow></math></th>
 <th class="ltx_td ltx_align_center ltx_th ltx_th_column"><math id="S7.I6.i2.m4" class="ltx_Math" data-alttext="[2]" display="inline"><mrow><mo stretchy="false">[</mo><mn>2</mn><mo stretchy="false">]</mo></mrow></math></th>
@@ -573,7 +573,7 @@
 <table class="ltx_tabular ltx_centering ltx_guessed_headers ltx_align_middle">
 <thead class="ltx_thead">
 <tr class="ltx_tr">
-<tr class="ltx_td ltx_align_center ltx_th ltx_th_column ltx_th_row ltx_border_r"><math id="S7.I6.i2.m37" class="ltx_Math" data-alttext="\odot" display="inline"><mo>⊙</mo></math></tr>
+<td class="ltx_td ltx_align_center ltx_th ltx_th_column ltx_th_row ltx_border_r"><math id="S7.I6.i2.m37" class="ltx_Math" data-alttext="\odot" display="inline"><mo>⊙</mo></math></td>
 <th class="ltx_td ltx_align_center ltx_th ltx_th_column"><math id="S7.I6.i2.m38" class="ltx_Math" data-alttext="[0]" display="inline"><mrow><mo stretchy="false">[</mo><mn>0</mn><mo stretchy="false">]</mo></mrow></math></th>
 <th class="ltx_td ltx_align_center ltx_th ltx_th_column"><math id="S7.I6.i2.m39" class="ltx_Math" data-alttext="[1]" display="inline"><mrow><mo stretchy="false">[</mo><mn>1</mn><mo stretchy="false">]</mo></mrow></math></th>
 <th class="ltx_td ltx_align_center ltx_th ltx_th_column"><math id="S7.I6.i2.m40" class="ltx_Math" data-alttext="[2]" display="inline"><mrow><mo stretchy="false">[</mo><mn>2</mn><mo stretchy="false">]</mo></mrow></math></th>
