--- a/johnweeks_cv.html
+++ b/johnweeks_cv.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <title>johnweeks_cv (3)</title>
+    <title>John Weeks CV</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.mathpix.com/fonts/cmu.css"/>
     <style>
@@ -256,7 +256,7 @@ mjx-status {
 }
 
 foreignObject[data-mjx-xml] {
-  font-family: initial;
+  /*font-family: initial;*/
   line-height: normal;
   overflow: visible;
 }
@@ -664,7 +664,7 @@ mjx-container[jax="SVG"] path[data-c], mjx-container[jax="SVG"] use[data-c] {
    }
 
     #preview-content code, #setText code {
-      font-family: Inconsolata;
+      /*font-family: Inconsolata;*/
       font-size: inherit;
       display: initial;
       background: #f8f8fa;
@@ -674,7 +674,7 @@ mjx-container[jax="SVG"] path[data-c], mjx-container[jax="SVG"] use[data-c] {
       background-color: transparent;
     }
     #preview-content pre code, #setText pre code {
-      font-family: 'DM Mono', Inconsolata, monospace;
+      /*font-family: 'DM Mono', Inconsolata, monospace;*/
       color: #333;
       font-size: 15px;
     }
@@ -866,7 +866,7 @@ mjx-container[jax="SVG"] path[data-c], mjx-container[jax="SVG"] use[data-c] {
   }
 
   #preview {
-    font-family: 'CMU Serif', 'Georgia', Helvetica, Arial, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
     font-size: 17px;
     visibility: visible;
     word-break: break-word;
@@ -877,11 +877,11 @@ mjx-container[jax="SVG"] path[data-c], mjx-container[jax="SVG"] use[data-c] {
   }
 
   #preview h1, #preview h2, #preview h3, #preview h4, #preview h5, #preview strong {
-    font-family: 'CMU Serif Bold', 'Georgia', Helvetica, Arial, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
   }
 
   #preview  i, #preview  em {
-    font-family: 'CMU Serif Italic', 'Georgia', Helvetica, Arial, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
   }
 
   .mmd-menu {
@@ -1111,7 +1111,7 @@ td .ClipboardButton .mmd-clipboard-icon {
       <h2 type="section" data-unnumbered="true" class="section-title preview-paragraph-0 preview-line 0" id="john-m.-weeks-mailstop-3368%2C-texas-a%5C%26m-university%2C-college-station%2C-tx-77843-jweeks03%40tamu.edu%2C-https%3A%2F%2Fjohnweeks03.github.io%2F%2C-accessible-cv" data_line_start="0" data_line_end="0" data_line="0,1" count_line="1">
 JOHN M. WEEKS <br>
  Mailstop 3368, Texas A&amp;M University, College Station, TX 77843 <br>
- jweeks03@tamu.edu, https://johnweeks03.github.io/, Accessible CV</h2>
+ jweeks03@tamu.edu, https://johnweeks03.github.io/</h2>
 <h2 type="section" data-unnumbered="true" class="section-title preview-paragraph-2 preview-line 2" id="academic-appointments" data_line_start="2" data_line_end="2" data_line="2,3" count_line="1">
 ACADEMIC APPOINTMENTS</h2>
 <h2 type="section" data-unnumbered="true" class="section-title preview-paragraph-4 preview-line 4" id="texas-a%5C%26m-university%2C-department-of-mathematics-graduate-teaching-assistant-director" data_line_start="4" data_line_end="4" data_line="4,5" count_line="1">
