Update johnweeks_cv.html first paragraph

--- a/johnweeks_cv.html
+++ b/johnweeks_cv.html
@@ -1111,19 +1111,19 @@ td .ClipboardButton .mmd-clipboard-icon {
       <h2 type="section" data-unnumbered="true" class="section-title preview-paragraph-0 preview-line 0" id="john-m.-weeks-mailstop-3368%2C-texas-a%5C%26m-university%2C-college-station%2C-tx-77843-jweeks03%40tamu.edu%2C-https%3A%2F%2Fjohnweeks03.github.io%2F%2C-accessible-cv" data_line_start="0" data_line_end="0" data_line="0,1" count_line="1">
 JOHN M. WEEKS <br>
  Mailstop 3368, Texas A&amp;M University, College Station, TX 77843 <br>
- jweeks03@tamu.edu, https://johnweeks03.github.io/</h2>
+ jweeks03@tamu.edu</h2>
 <h2 type="section" data-unnumbered="true" class="section-title preview-paragraph-2 preview-line 2" id="academic-appointments" data_line_start="2" data_line_end="2" data_line="2,3" count_line="1">
 ACADEMIC APPOINTMENTS</h2>
 <h2 type="section" data-unnumbered="true" class="section-title preview-paragraph-4 preview-line 4" id="texas-a%5C%26m-university%2C-department-of-mathematics-graduate-teaching-assistant-director" data_line_start="4" data_line_end="4" data_line="4,5" count_line="1">
-Texas A&amp;M University, Department of Mathematics <br>
- Graduate Teaching Assistant Director</h2>
-<div class="preview-paragraph-6 preview-line 6 7" data_line_start="6" data_line_end="7" data_line="6,8" count_line="2">College Station, TX<br>
-2024-</div>
+Texas A&amp;M University, Department of Mathematics, College Station, TX</h2>
+
+<div class="preview-paragraph-6 preview-line 6 7" data_line_start="6" data_line_end="7" data_line="6,8" count_line="2">
+Graduate Teaching Assistant Director, 2024-</div>
 <ul class="preview-paragraph-8 preview-line 8 9" data_line_start="8" data_line_end="9" data_line="8,10" count_line="2">
 <li>Oversee hiring assignments and teaching-related mentoring for over 150 Master's and Ph.D. students</li>
 </ul>
-<div class="preview-paragraph-10 preview-line 10 11 12" data_line_start="10" data_line_end="12" data_line="10,13" count_line="3">Instructional Assistant Professor<br>
-2022-<br>
+<div class="preview-paragraph-10 preview-line 10 11 12" data_line_start="10" data_line_end="12" data_line="10,13" count_line="3">Instructional Assistant Professor, 2022-<br>
+<br>
 Instructor of Record 2020, 2019</div>
 <div class="preview-paragraph-14 preview-line 14 15" data_line_start="14" data_line_end="15" data_line="14,16" count_line="2">Graduate Teaching Assistant<br>
 2017-2022</div>
