Update johnweeks_cv.html experiment w preview-content

--- a/johnweeks_cv.html
+++ b/johnweeks_cv.html
@@ -415,7 +415,7 @@ mjx-container[jax="SVG"] path[data-c], mjx-container[jax="SVG"] use[data-c] {
         overflow: auto;
         font-size: 85%;
         line-height: 1.45;
-        border-radius: 6px;
+        /*border-radius: 6px;*/
         box-sizing: border-box;
         background: #f8f8fa;
     }
@@ -475,7 +475,7 @@ mjx-container[jax="SVG"] path[data-c], mjx-container[jax="SVG"] use[data-c] {
 
     #preview-content .author p, #setText .author p {
         min-width: 30%;
-        max-width: 50%;
+        max-width: 95%;
         padding: 0 7px;
     }
 
@@ -1108,10 +1108,10 @@ td .ClipboardButton .mmd-clipboard-icon {
   <div id="preview" class="preview scrollEditor">
     <div id="container-ruller" />
     <div id="preview-content">
-      <h2 type="section" data-unnumbered="true" class="section-title preview-paragraph-0 preview-line 0" id="john-m.-weeks-mailstop-3368%2C-texas-a%5C%26m-university%2C-college-station%2C-tx-77843-jweeks03%40tamu.edu%2C-https%3A%2F%2Fjohnweeks03.github.io%2F%2C-accessible-cv" data_line_start="0" data_line_end="0" data_line="0,1" count_line="1">
+      <h2 type="section" data-unnumbered="true" class="section-title preview-paragraph-0 preview-line 0"  data_line_start="0" data_line_end="0" data_line="0,1" count_line="1">
 JOHN M. WEEKS <br>
  Mailstop 3368, Texas A&amp;M University, College Station, TX 77843 <br>
- jweeks03@tamu.edu</h2>
+ Email: first initial, last name, zero, three, at, tamu.edu</h2>
 <h2 type="section" data-unnumbered="true" class="section-title preview-paragraph-2 preview-line 2" id="academic-appointments" data_line_start="2" data_line_end="2" data_line="2,3" count_line="1">
 ACADEMIC APPOINTMENTS</h2>
 <h2 type="section" data-unnumbered="true" class="section-title preview-paragraph-4 preview-line 4" id="texas-a%5C%26m-university%2C-department-of-mathematics-graduate-teaching-assistant-director" data_line_start="4" data_line_end="4" data_line="4,5" count_line="1">
