--- a/johnweeks_cv.html
+++ b/johnweeks_cv.html
@@ -1155,8 +1155,11 @@ Mathematics Communication and Technology, Summer 2025</div>
 <li>Instruction on effective AI use, accessibility requirements, and hands-on course instruction</li>
 <li>Students prepare and present their own lectures and recitations as final projects</li>
 </ul>
-<div class="preview-paragraph-44 preview-line 44 45 46 47 48" data_line_start="44" data_line_end="48" data_line="44,49" count_line="5">Hullabaloo U, Fall 2024<br>
--University orientation course for first-year A&amp;M math majors<br>
+<div class="preview-paragraph-44 preview-line 44 45 46 47 48" data_line_start="44" data_line_end="48" data_line="44,49" count_line="5">Hullabaloo U, Fall 2024
+<ul class="preview-paragraph-26 preview-line 26 27 28" data_line_start="26" data_line_end="28" data_line="26,29" count_line="3">
+<li> University orientation course for first-year A&amp;M math majors
+</li>
+</ul>
 Introduction to Classical Analysis (online asynchronous), Summer 2024<br>
 Linear Algebra for Engineering, Spring 2025 &amp; Spring 2024<br>
 Transition to Graduate Mathematics (online asynchronous), Fall 2025-2023</div>
@@ -1228,20 +1231,12 @@ Texas A&amp;M Math Circle <br>
  Co-Director</h2>
 <div class="preview-paragraph-83 preview-line 83" data_line_start="83" data_line_end="83" data_line="83,84" count_line="1">2022-2024</div>
 <ul class="preview-paragraph-84 preview-line 84 85 86 87 88 89 90" data_line_start="84" data_line_end="90" data_line="84,91" count_line="7">
-<li>Gave several public lectures on interactive inquiry-based activities for <span class="math-inline "><mathml style="display: none;"><math xmlns="http://www.w3.org/1998/Math/MathML">
-  <mn>5</mn>
-  <mo>&#x2212;</mo>
-  <mn>12</mn>
-</math></mathml><mathmlword style="display: none;"><math xmlns="http://www.w3.org/1998/Math/MathML">
-  <mn>5</mn>
-  <mo>−</mo>
-  <mn>12</mn>
-</math></mathmlword><asciimath style="display: none;">5-12</asciimath><latex style="display: none;">5-12</latex><mjx-container class="MathJax" jax="SVG" style="position: relative;"><svg style="vertical-align: -0.186ex;" xmlns="http://www.w3.org/2000/svg" width="6.159ex" height="1.692ex" role="img" focusable="false" viewBox="0 -666 2722.4 748" aria-hidden="true"><g stroke="currentColor" fill="currentColor" stroke-width="0" transform="scale(1,-1)"><g data-mml-node="math"><g data-mml-node="mn"><path data-c="35" d="M164 157Q164 133 148 117T109 101H102Q148 22 224 22Q294 22 326 82Q345 115 345 210Q345 313 318 349Q292 382 260 382H254Q176 382 136 314Q132 307 129 306T114 304Q97 304 95 310Q93 314 93 485V614Q93 664 98 664Q100 666 102 666Q103 666 123 658T178 642T253 634Q324 634 389 662Q397 666 402 666Q410 666 410 648V635Q328 538 205 538Q174 538 149 544L139 546V374Q158 388 169 396T205 412T256 420Q337 420 393 355T449 201Q449 109 385 44T229 -22Q148 -22 99 32T50 154Q50 178 61 192T84 210T107 214Q132 214 148 197T164 157Z"></path></g><g data-mml-node="mo" transform="translate(722.2,0)"><path data-c="2212" d="M84 237T84 250T98 270H679Q694 262 694 250T679 230H98Q84 237 84 250Z"></path></g><g data-mml-node="mn" transform="translate(1722.4,0)"><path data-c="31" d="M213 578L200 573Q186 568 160 563T102 556H83V602H102Q149 604 189 617T245 641T273 663Q275 666 285 666Q294 666 302 660V361L303 61Q310 54 315 52T339 48T401 46H427V0H416Q395 3 257 3Q121 3 100 0H88V46H114Q136 46 152 46T177 47T193 50T201 52T207 57T213 61V578Z"></path><path data-c="32" d="M109 429Q82 429 66 447T50 491Q50 562 103 614T235 666Q326 666 387 610T449 465Q449 422 429 383T381 315T301 241Q265 210 201 149L142 93L218 92Q375 92 385 97Q392 99 409 186V189H449V186Q448 183 436 95T421 3V0H50V19V31Q50 38 56 46T86 81Q115 113 136 137Q145 147 170 174T204 211T233 244T261 278T284 308T305 340T320 369T333 401T340 431T343 464Q343 527 309 573T212 619Q179 619 154 602T119 569T109 550Q109 549 114 549Q132 549 151 535T170 489Q170 464 154 447T109 429Z" transform="translate(500,0)"></path></g></g></g></svg><mjx-assistive-mml unselectable="on" display="inline"><math xmlns="http://www.w3.org/1998/Math/MathML"><mn>5</mn><mo>−</mo><mn>12</mn></math></mjx-assistive-mml></mjx-container></span> grade gifted/talented students</li>
+<li>Gave several public lectures on interactive inquiry-based activities for 5th-12th grade gifted/talented students</li>
 <li>Created and designed activities for other instructors</li>
 <li>Coordinated faculty and student volunteers</li>
 <li>Maintained online presence and coordinate with hybrid online sessions</li>
 <li>Recruited at local schools and at local job fairs</li>
-<li>Designed topology mini-curriculum for 9-12 students</li>
+<li>Designed topology mini-curriculum for 9th-12th grade students</li>
 </ul>
 <h2 type="section" data-unnumbered="true" class="section-title preview-paragraph-91 preview-line 91" id="aggie-honor-system-office" data_line_start="91" data_line_end="91" data_line="91,92" count_line="1">
 Aggie Honor System Office</h2>
