Update 6-2.html typo on Table 6.1

--- a/teaching/300/300readings/6-2.html
+++ b/teaching/300/300readings/6-2.html
@@ -207,43 +207,22 @@
 <td class="ltx_td ltx_align_center ltx_border_b ltx_border_l ltx_border_r ltx_border_t">2</td>
 <td class="ltx_td ltx_align_center ltx_border_b ltx_border_r ltx_border_t">1</td>
 </tr>
-</tbody>
-</table>
-</div>
-<div id="S6.SS2.SSS3.p8" class="ltx_para">
-<table class="ltx_tabular ltx_centering ltx_guessed_headers ltx_align_middle">
-<thead class="ltx_thead">
-<tr class="ltx_tr">
-<th class="ltx_td ltx_th ltx_th_column ltx_border_l ltx_border_r ltx_border_t"></th>
-<th class="ltx_td ltx_align_center ltx_th ltx_th_column ltx_border_r ltx_border_t">
-<table role="presentation" class="ltx_tabular ltx_align_middle">
-<tr class="ltx_tr">
-<td class="ltx_td ltx_align_center">
-<math id="S6.SS2.SSS3.m4" class="ltx_Math" alttext="r" display="inline"><mi>r</mi></math> where</td>
-</tr>
-<tr class="ltx_tr">
-<td class="ltx_td ltx_align_center"><math id="S6.SS2.SSS3.m5" class="ltx_Math" alttext="x" display="inline"><mi>x</mi></math></td>
-</tr>
-</table>
-</th>
-</tr>
-</thead>
-<tbody class="ltx_tbody">
 <tr class="ltx_tr">
 <td class="ltx_td ltx_align_center ltx_border_l ltx_border_r ltx_border_t">3</td>
-<td class="ltx_td ltx_align_center ltx_border_r ltx_border_t"><math id="S6.SS2.SSS3.m6" class="ltx_Math" alttext="\left(x^{2}+3\right)\equiv r(\bmod 6)" display="inline"><mrow><mrow><mo>(</mo><mrow><msup><mi>x</mi><mn>2</mn></msup><mo>+</mo><mn>3</mn></mrow><mo>)</mo></mrow><mo>≡</mo><mrow><mi>r</mi><mspace style="width:0.3888888888888889em;" width="0.3888888888888889em"></mspace><mrow><mo stretchy="false">(</mo><mrow><mi></mi><mo>mod</mo><mn>6</mn></mrow><mo stretchy="false">)</mo></mrow></mrow></mrow></math></td>
-</tr>
-<tr class="ltx_tr">
-<td class="ltx_td ltx_align_center ltx_border_l ltx_border_r ltx_border_t">4</td>
 <td class="ltx_td ltx_align_center ltx_border_r ltx_border_t">0</td>
 </tr>
 <tr class="ltx_tr">
+<td class="ltx_td ltx_align_center ltx_border_l ltx_border_r ltx_border_t">4</td>
+<td class="ltx_td ltx_align_center ltx_border_r ltx_border_t">1</td>
+</tr>
+<tr class="ltx_tr">
 <td class="ltx_td ltx_align_center ltx_border_b ltx_border_l ltx_border_r ltx_border_t">5</td>
-<td class="ltx_td ltx_align_center ltx_border_b ltx_border_r ltx_border_t">1</td>
+<td class="ltx_td ltx_align_center ltx_border_b ltx_border_r ltx_border_t">4</td>
 </tr>
 </tbody>
 </table>
 </div>
+
 <div id="S6.SS2.SSS3.p9" class="ltx_para">
 <p class="ltx_p" style="text-align: center">Table 6.1: Table of Values Defined by a Congruence</p>
 </div>
