Update 4-3.html typo

--- a/teaching/300/300notes/4-3.html
+++ b/teaching/300/300notes/4-3.html
@@ -125,7 +125,7 @@ least one }}\alpha\in\Delta\}." display="block"><mrow><mrow><mrow><munder><mo mo
 <tbody><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
 <td class="ltx_eqn_cell ltx_eqn_center_padleft"></td>
 <td class="ltx_eqn_cell ltx_align_center"><math id="S4.Ex6.m1" class="ltx_Math" alttext="\bigcap_{n=1}^{\infty}A_{n}:=\{x\mid x\in A_{\alpha}\text{ for {all} }n\in%
-\mathbb{N}\}." display="block"><mrow><mrow><mrow><munderover><mo movablelimits="false">⋂</mo><mrow><mi>n</mi><mo>=</mo><mn>1</mn></mrow><mi mathvariant="normal">∞</mi></munderover><msub><mi>A</mi><mi>n</mi></msub></mrow><mo>:=</mo><mrow><mo stretchy="false">{</mo><mi>x</mi><mo fence="true" lspace="0em" rspace="0em">∣</mo><mrow><mi>x</mi><mo>∈</mo><mrow><msub><mi>A</mi><mi>α</mi></msub><mo>⁢</mo><mrow><mtext> for </mtext><mtext class="ltx_mathvariant_italic">all</mtext><mtext> </mtext></mrow><mo>⁢</mo><mi>n</mi></mrow><mo>∈</mo><mi>ℕ</mi></mrow><mo stretchy="false">}</mo></mrow></mrow><mo lspace="0em">.</mo></mrow></math></td>
+\mathbb{N}\}." display="block"><mrow><mrow><mrow><munderover><mo movablelimits="false">⋂</mo><mrow><mi>n</mi><mo>=</mo><mn>1</mn></mrow><mi mathvariant="normal">∞</mi></munderover><msub><mi>A</mi><mi>n</mi></msub></mrow><mo>:=</mo><mrow><mo stretchy="false">{</mo><mi>x</mi><mo fence="true" lspace="0em" rspace="0em">∣</mo><mrow><mi>x</mi><mo>∈</mo><mrow><msub><mi>A</mi><mi>n</mi></msub><mo>⁢</mo><mrow><mtext> for </mtext><mtext class="ltx_mathvariant_italic">all</mtext><mtext> </mtext></mrow><mo>⁢</mo><mi>n</mi></mrow><mo>∈</mo><mi>ℕ</mi></mrow><mo stretchy="false">}</mo></mrow></mrow><mo lspace="0em">.</mo></mrow></math></td>
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr></tbody>
 </table>
