Update 1-1.html header!?

--- a/teaching/300/300notes/1-1.html
+++ b/teaching/300/300notes/1-1.html
@@ -9,6 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
+  <header></header>
 <div class="ltx_page_main">
 <div class="ltx_page_content">
 <article class="ltx_document">
@@ -206,7 +207,7 @@
 </ol>
 </div>
 </div>
-<div class="ltx_pagination ltx_role_newpage"></div>
+<div class="ltx_pagination ltx_role_newpage"></div><header></header>
 </section>
 <section id="S1.SS1.SSS2" class="ltx_subsubsection">
 <h4 class="ltx_title ltx_title_subsubsection">
@@ -248,7 +249,7 @@
 </div>
   <div class="answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
-<div class="ltx_pagination ltx_role_newpage"></div>
+<div class="ltx_pagination ltx_role_newpage"></div><header></header>
 <div id="S1.SS1.SSS2.p4" class="ltx_para">
 <p class="ltx_p">Notice that the only this statement can be proven false is if we find a case where <math id="S1.SS1.SSS2.p4.m1" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> is true but <math id="S1.SS1.SSS2.p4.m2" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math> is false. This motivates the following result:</p>
 </div>
@@ -359,7 +360,7 @@
 <p class="ltx_p">Given a conditional statement <math id="S1.SS1.Thmtheorem7.p1.m1" class="ltx_Math" alttext="P\Rightarrow Q" display="inline"><mrow><mi>P</mi><mo stretchy="false">⇒</mo><mi>Q</mi></mrow></math>, the <span class="ltx_text ltx_font_bold">contrapositive</span> of this statement is <math id="S1.SS1.Thmtheorem7.p1.m2" class="ltx_Math" alttext="\neg Q\Rightarrow\neg P" display="inline"><mrow><mrow><mo rspace="0.167em">¬</mo><mi>Q</mi></mrow><mo stretchy="false">⇒</mo><mrow><mo rspace="0.167em">¬</mo><mi>P</mi></mrow></mrow></math>.</p>
 </div>
 </div>
-<div class="ltx_pagination ltx_role_newpage"></div>
+<div class="ltx_pagination ltx_role_newpage"></div><header></header>
 <div id="S1.SS1.Thmtheorem8" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>1.1.8.</h3>
@@ -407,7 +408,7 @@
 </div>
   <div class="answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
-<div class="ltx_pagination ltx_role_newpage"></div>
+<div class="ltx_pagination ltx_role_newpage"></div><header></header>
 </section>
 </section>
 </section>
